--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/public/Images/SAS.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SAS</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-W5EcYs6aFftmzE58vX7hj9EB2Dv4aB0FQv3wHkXt4m3wCzZ2L8yfE9b9Y+yLxf2Ez5f9l4gDy3DeIc1AtKNGHg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   </head>
   <body>
     <div id="root"></div>
