refactor: Use optional chaining for mapping user and record data in Users and View Locations pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SAS</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-W5EcYs6aFftmzE58vX7hj9EB2Dv4aB0FQv3wHkXt4m3wCzZ2L8yfE9b9Y+yLxf2Ez5f9l4gDy3DeIc1AtKNGHg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCP7t9f-LdPosDL6TMiOZt02t4au9gFT5E&callback=initMap" async></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCP7t9f-LdPosDL6TMiOZt02t4au9gFT5E&callback=initMap" async defer></script>
+    
+    <script>
+      function initMap() {
+        // This function is needed for the callback in the script tag
+        window.dispatchEvent(new Event('mapsLoaded'));
+      }
+    </script>
 
   </head>
   <body>
